--- a/joi/package.json
+++ b/joi/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "joi": "^13.4.0"
+    "joi": "^13.4.0",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
