--- a/joi/package.json
+++ b/joi/package.json
@@ -11,6 +11,7 @@
     "test": "mocha -R spec test/*.spec.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "joi": "^13.4.0",
