--- a/joi/package.json
+++ b/joi/package.json
@@ -19,10 +19,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/chai-http": "^3.0.4",
     "@types/express": "^4.16.0",
     "@types/joi": "^13.3.0",
     "@types/mocha": "^5.2.3",
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "mocha": "^5.2.0"
   }
 }
