--- a/movieql-client/package.json
+++ b/movieql-client/package.json
@@ -6,12 +6,15 @@
     "apollo-boost": "^0.1.10",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.4",
+    "styled-components": "^3.3.3",
+    "styled-reset": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
