--- a/start-serveless-aws/package.json
+++ b/start-serveless-aws/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "serverless": "^1.30.1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.299.0",
+    "uuid": "^3.3.2"
   }
 }
