--- a/start-serveless-aws/serverless.yml
+++ b/start-serveless-aws/serverless.yml
@@ -3,11 +3,32 @@ service: my-app
 provider:
   name: aws
   runtime: nodejs8.10
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+      Resource: "arn:aws:dynamodb:us-east-1:842624465037:table/todos"
 
 functions:
-  helloWorld:
-    handler: handler.run
+  createTodo:
+    handler: create.run
     events:
       - http:
-          path: /
-          method: get
+          path: todos
+          method: post
+
+resources:
+  Resources:
+    TodosDynamoDbTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
