[serverless] DynamoDB 에서 간단하게 Read 하는 기능 추가
npx sls deploy
curl https://rzkzkplyif.execute-api.us-east-1.amazonaws.com/dev/todos/fbde1b18-ae5e-41fd-8e7b-fc6da9c6dd8b
npx sls invoke --function getTodo --log --data '{ "pathParameters": { "id": "fbde1b18-ae5e-41fd-8e7b-fc6da9c6dd8b" } }'

--- a/start-serveless-aws/serverless.yml
+++ b/start-serveless-aws/serverless.yml
@@ -17,6 +17,12 @@ functions:
       - http:
           path: todos
           method: post
+  getTodo:
+    handler: get.run
+    events:
+      - http:
+          path: todos/{id}
+          method: get
 
 resources:
   Resources:
