--- a/socket.io/basic/package.json
+++ b/socket.io/basic/package.json
@@ -16,12 +16,14 @@
   "author": "kanziw <kanziwoong@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "debug": "^3.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/debug": "0.0.30",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.4",
     "@types/redis": "^2.8.6",
