[socket] Redis 를 이용해 서로 다른 소켓서버간 통신 가능한 것 확인

--- a/socket.io/basic/package.json
+++ b/socket.io/basic/package.json
@@ -16,12 +16,15 @@
   "author": "kanziw <kanziwoong@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.2",
     "debug": "^3.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.24",
     "@types/chai": "^4.1.4",
     "@types/debug": "0.0.30",
     "@types/mocha": "^5.2.5",
@@ -29,6 +32,7 @@
     "@types/redis": "^2.8.6",
     "@types/socket.io": "^1.4.38",
     "@types/socket.io-client": "^1.4.32",
+    "@types/socket.io-redis": "^1.0.25",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
