--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -6,7 +6,9 @@
     "antd": "^3.10.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "styled-components": "^4.0.3",
+    "styled-reset": "^1.6.0"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
@@ -18,6 +20,7 @@
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/styled-components": "^4.0.3",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "ts-import-plugin": "^1.5.5",
