--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.3",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-scripts-ts": "3.1.0",
     "styled-components": "^4.0.3",
     "styled-reset": "^1.6.0"
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.2",
-    "@types/react": "^16.4.18",
+    "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
     "@types/styled-components": "^4.0.3",
     "react-app-rewire-less": "^2.1.3",
