[antd] Setup apollo provider

--- a/antd-demo-ts/tsconfig.json
+++ b/antd-demo-ts/tsconfig.json
@@ -6,7 +6,8 @@
     "target": "es5",
     "lib": [
       "es6",
-      "dom"
+      "dom",
+      "esnext.asynciterable"
     ],
     "sourceMap": true,
     "allowJs": true,
