--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -9,6 +9,7 @@
     "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.7.0-alpha.2",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts-ts": "3.1.0",
     "styled-components": "^4.0.3",
     "styled-reset": "^1.6.0"
@@ -19,7 +20,7 @@
     "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
     "download:json": "wget https://raw.githubusercontent.com/octokit/graphql-schema/master/schema.json",
     "download:graphql": "cd src/types && wget https://raw.githubusercontent.com/octokit/graphql-schema/master/schema.graphql",
-    "predownload": "rm -f schema.json types/schema.graphql",
+    "predownload": "rm -f schema.json && rm -f src/types/schema.graphql",
     "download": "npm run download:json; npm run download:graphql",
     "precodegen": "npm run download",
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat"
@@ -30,6 +31,7 @@
     "@types/node": "^10.12.2",
     "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.0.3",
     "apollo": "1.9.2",
     "react-app-rewire-less": "^2.1.3",
