--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "antd": "^3.10.3",
     "apollo-boost": "^0.1.20",
-    "graphql": "^14.0.2",
+    "graphql": "0.13.2",
     "react": "^16.7.0-alpha.2",
-    "react-apollo": "^2.3.1",
+    "react-apollo": "2.2.4",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts-ts": "3.1.0",
