--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -23,7 +23,9 @@
     "predownload": "rm -f schema.json && rm -f src/types/schema.graphql",
     "download": "npm run download:json; npm run download:graphql",
     "precodegen": "npm run download",
-    "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat"
+    "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat",
+    "pretypes": "npm run codegen",
+    "types": "graphql-schema-typescript generate-ts src/types/schema.graphql --output=src/types/graphql.d.ts"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.3",
@@ -34,6 +36,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.0.3",
     "apollo": "1.9.2",
+    "graphql-schema-typescript": "^1.2.8",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "ts-import-plugin": "^1.5.5",
