--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts-ts": "3.1.0",
+    "react-toastify": "^4.4.3",
     "styled-components": "^4.0.3",
     "styled-reset": "^1.6.0"
   },
@@ -34,6 +35,7 @@
     "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-toastify": "^4.0.1",
     "@types/styled-components": "^4.0.3",
     "apollo": "1.9.2",
     "graphql-schema-typescript": "^1.2.8",
