--- a/antd-demo-ts/package.json
+++ b/antd-demo-ts/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.3",
-    "apollo-boost": "^0.1.20",
+    "apollo-cache-inmemory": "^1.3.10",
+    "apollo-client": "^2.4.6",
+    "apollo-link": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
     "graphql": "0.13.2",
+    "graphql-tag": "^2.10.0",
     "react": "^16.7.0-alpha.2",
     "react-apollo": "2.2.4",
     "react-dom": "^16.7.0-alpha.2",
