--- a/strapi/package.json
+++ b/strapi/package.json
@@ -16,7 +16,8 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "strapi-provider-upload-aws-s3": "^3.0.0-alpha.15"
   },
   "dependencies": {
     "lodash": "^4.17.5",
