--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.3.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
-    "type-graphql": "^0.16.0"
+    "type-graphql": "^0.16.0",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.16.0",
     "@types/graphql": "^14.0.4",
     "@types/node": "^10.12.18",
