--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -4,11 +4,12 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.9.1",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "mysql": "^2.17.1",
@@ -23,6 +24,7 @@
     "@types/node": "^10.12.18",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
+    "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.2.2"
   }
 }
