--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -10,8 +10,12 @@
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.9.1",
+    "connect-redis": "^3.4.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "graphql": "^14.0.2",
+    "ioredis": "^4.10.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.16.0",
@@ -19,8 +23,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.10",
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.12",
     "@types/graphql": "^14.0.4",
+    "@types/ioredis": "^4.0.12",
     "@types/node": "^10.12.18",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
