--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -17,9 +17,11 @@
     "graphql": "^14.0.2",
     "ioredis": "^4.10.0",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.2.1",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.16.0",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,6 +32,8 @@
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.0.12",
     "@types/node": "^10.12.18",
+    "@types/nodemailer": "^6.2.0",
+    "@types/uuid": "^3.4.4",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.39",
