--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest"
   },
   "dependencies": {
     "apollo-server-express": "^2.3.1",
@@ -32,10 +34,13 @@
     "@types/express-session": "^1.15.12",
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.0.12",
+    "@types/jest": "^24.0.14",
     "@types/node": "^10.12.18",
     "@types/nodemailer": "^6.2.0",
     "@types/uuid": "^3.4.4",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.9",
+    "ts-jest": "^24.0.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.17.0",
