--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -32,12 +32,14 @@
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.12",
+    "@types/faker": "^4.1.5",
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.0.12",
     "@types/jest": "^24.0.14",
     "@types/node": "^10.12.18",
     "@types/nodemailer": "^6.2.0",
     "@types/uuid": "^3.4.4",
+    "faker": "^4.1.0",
     "jest": "^24.8.0",
     "nodemon": "^1.18.9",
     "ts-jest": "^24.0.2",
