--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "graphql": "^14.0.2",
+    "graphql": "^14.3.1",
+    "graphql-upload": "^8.0.7",
     "ioredis": "^4.10.0",
     "mysql": "^2.17.1",
     "nodemailer": "^6.2.1",
@@ -33,7 +34,8 @@
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.12",
     "@types/faker": "^4.1.5",
-    "@types/graphql": "^14.0.4",
+    "@types/graphql": "^14.2.0",
+    "@types/graphql-upload": "^8.0.0",
     "@types/ioredis": "^4.0.12",
     "@types/jest": "^24.0.14",
     "@types/node": "^10.12.18",
