--- a/type-graphql-start/package.json
+++ b/type-graphql-start/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "graphql": "^14.3.1",
+    "graphql-query-complexity": "^0.3.0",
     "graphql-upload": "^8.0.7",
     "ioredis": "^4.10.0",
     "mysql": "^2.17.1",
@@ -35,6 +36,7 @@
     "@types/express-session": "^1.15.12",
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.0",
+    "@types/graphql-query-complexity": "^0.1.2",
     "@types/graphql-upload": "^8.0.0",
     "@types/ioredis": "^4.0.12",
     "@types/jest": "^24.0.14",
